--- a/pao2_prediction/2_RFE.qmd
+++ b/pao2_prediction/2_RFE.qmd
@@ -177,11 +177,11 @@ print(f"Features selected based on RMSE >= {config.get('cv_threshold')}:\n{featu
 
 ```{python}
 # | label: fig_feature_selection
-# | fig-cap: "CV RMSE scores for different Regressors for Feature Selection"
+# | fig-cap: "CV nRMSE scores for different Regressors for Feature Selection"
 
 fig, axs = plt.subplot_mosaic([['a.', 'b.', 'c.'], ['d.', 'e.', 'f.'], ['.', 'h.', '.']][:int(np.ceil(len(algorithm_dict.keys())/2))], layout = 'constrained', figsize=(3 * config.get('plot_size'), int(np.ceil(len(algorithm_dict.keys())/3)) * config.get('plot_size')/1.5),)
 fig.set_tight_layout(True)
-fig.suptitle("CV scores (nRMSE) per Regressor\n")
+fig.suptitle("Cross-validated nRMSE values per Regressor\n")
 
 all_y = []
 for name in config.get("plot_titles").keys():
@@ -244,7 +244,7 @@ for ax_label, (name, title) in zip(axs.keys(), config.get("plot_titles").items()
         ax.set_ylim(min(all_y) * 1.05, max(all_y) * 0.95)
 
         ax.set_xlabel("Number of features selected")
-        ax.set_ylabel("CV score")
+        ax.set_ylabel("nRMSE")
         ax.set_title(f"{title}")
         trans = mtransforms.ScaledTranslation(10/72, -5/72, fig.dpi_scale_trans)
         ax.text(0.0, 1.0, ax_label, transform=ax.transAxes + trans,
