--- a/pao2_prediction/3_Hyperparameters_GridSearch.qmd
+++ b/pao2_prediction/3_Hyperparameters_GridSearch.qmd
@@ -13,26 +13,26 @@ format:
         toc-title: Contents
         number-sections: true
     # pdf:
-    #    toc: true
-    #    number-sections: true
-    #    toc-location: left
-    #    code-line-numbers: true
-    #    output-ext: "pdf"
-    #    papersize: "A4"
-    #    include-in-header: 
-    #        text: |
-    #            \usepackage{fvextra}
-    #            \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
-    #            \DefineVerbatimEnvironment{OutputCode}{Verbatim}{breaklines,commandchars=\\\{\}}
-    #    include-before-body:
-    #        text: |
-    #            \RecustomVerbatimEnvironment{verbatim}{Verbatim}{
-    #            showspaces = false,
-    #            showtabs = false,
-    #            breaksymbolleft={},
-    #            breaklines
-    #            % Note: setting commandchars=\\\{\} here will cause an error 
-    #            }
+    #     toc: true
+    #     number-sections: true
+    #     toc-location: left
+    #     code-line-numbers: true
+    #     output-ext: "pdf"
+    #     papersize: "A4"
+    #     include-in-header: 
+    #         text: |
+    #             \usepackage{fvextra}
+    #             \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
+    #             \DefineVerbatimEnvironment{OutputCode}{Verbatim}{breaklines,commandchars=\\\{\}}
+    #     include-before-body:
+    #         text: |
+    #             \RecustomVerbatimEnvironment{verbatim}{Verbatim}{
+    #             showspaces = false,
+    #             showtabs = false,
+    #             breaksymbolleft={},
+    #             breaklines
+    #             % Note: setting commandchars=\\\{\} here will cause an error 
+    #             }
 jupyter: python3
 ---
 
@@ -640,7 +640,7 @@ Script arguments:
 
 ----------
 
-### Evaluation of all Models
+### Evaluation of all models
 
 Read cv_results and define best estimator per slice.
 
